# laba4.1

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build1/formatter_ex_lib/: Makefile  cmake_install.cmake
build1/formatter_lib/: Makefile  cmake_install.cmake
build1/solver_application/: Makefile  cmake_install.cmake  solverexe
build1/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
